chore: add junit report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,15 @@ jobs:
         run: npm ci
         shell: bash
       - name: Run E2E tests
-        run: npx uuv e2e --generateHtmlReport
+        run: npx uuv e2e --generateHtmlReport --generateJunitReport
         shell: bash
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Report - E2E Tests
+          path: uuv/reports/e2e/junit-report.xml
+          reporter: jest-junit
       - uses: actions/upload-artifact@v3
         if: ${{ always() }}
         with:
