feat: add uuv vscode extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,18 +5,19 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "CucumberOpen.cucumber-official"
+                "CucumberOpen.cucumber-official",
+                "e2e-test-quest.uuv-vscode-extension"
             ],
             "settings": {
                 "cucumber.features": [
                     "uuv/e2e/**/*.feature"
-                  ],
-                  "cucumber.glue": [
+                ],
+                "cucumber.glue": [
                     "uuv/cucumber/step_definitions/**/*.{js,ts}",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/unsafe/**/*.ts",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/generated/**/*.ts",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/generated/enriched/*/*.ts"
-                  ]
+                ]
             }
         }
     },
