chore: use java-junit to read junit-report

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           name: Report - E2E Tests
           path: uuv/reports/e2e/junit-report.xml
-          reporter: jest-junit
+          reporter: java-junit
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
