feat: add uuv assistant

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/e2e-test-quest/kata-e2e-uuv#readme",
   "devDependencies": {
-    "@uuv/cypress": "^2.23.1"
+    "@uuv/assistant": "^2.22.0",
+    "@uuv/cypress": "^2.25.0"
   }
 }
