--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,30 +5,19 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "alexkrechik.cucumberautocomplete",
+                "CucumberOpen.cucumber-official",
                 "e2e-test-quest.uuv-vscode-extension"
             ],
             "settings": {
-                "cucumberautocomplete.syncfeatures": "uuv/e2e/**/*.feature",
-                "cucumberautocomplete.steps": [
+                "cucumber.features": [
+                    "uuv/e2e/**/*.feature"
+                ],
+                "cucumber.glue": [
                     "uuv/cucumber/step_definitions/**/*.{js,ts}",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/unsafe/**/*.ts",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/generated/**/*.ts",
                     "node_modules/@uuv/*/src/cucumber/step_definitions/*/generated/enriched/*/*.ts"
-                ],
-                "cucumberautocomplete.pureTextSteps": true,
-                "cucumberautocomplete.smartSnippets": true,
-                "cucumberautocomplete.customParameters": [
-                    {
-                        "parameter":"{string}",
-                        "value":".*"
-                    }
-                ],
-                "editor.quickSuggestions": {
-                    "comments": false,
-                    "strings": true,
-                    "other": true
-                }
+                ]
             }
         }
     },
