chore: update node version to 22.22.10

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,22 +5,18 @@ on:
     branches: [ "**" ]
 
 env:
-  NODE_VERSION: 18.14.0
+  NODE_VERSION: 22.22.0
 
 jobs:
   test-e2e:
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:node18.12.0-chrome107
+      image: e2etesting/uuv
     environment:
       name: production
       url: https://e2e-test-quest.github.io/kata-e2e-uuv/${{ github.ref == 'refs/heads/main' && '/' || github.ref_name }}
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{env.NODE_VERSION}}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{env.NODE_VERSION}}
       - name: Install Dependencies
         run: npm ci
         shell: bash
