--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/e2e-test-quest/kata-e2e-uuv#readme",
   "devDependencies": {
-    "@uuv/assistant": "^2.50.0",
-    "@uuv/cypress": "^2.53.0"
+    "@uuv/assistant": "^2.75.0",
+    "@uuv/cypress": "^2.75.0"
+  },
+  "engines": {
+    "node": "^22.2.0"
   }
 }
