chore: update github action test-reporter version to 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,13 @@ jobs:
         run: npx uuv e2e --generateHtmlReport --generateJunitReport
         shell: bash
       - name: Test Report
-        uses: dorny/test-reporter@v2
+        uses: MichaelVoelkel/test-reporter@main
         if: success() || failure()
         with:
           name: Report - E2E Tests
           path: uuv/reports/e2e/junit-report.xml
           reporter: java-junit
+          fail-on-error: false
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
