feat: init playwright version

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/e2e-test-quest/kata-e2e-uuv#readme",
   "devDependencies": {
     "@uuv/assistant": "^2.75.0",
-    "@uuv/cypress": "^2.75.0"
+    "@uuv/playwright": "^3.56.0"
   },
   "engines": {
     "node": "^22.2.0"
